--- a/history
+++ b/history
@@ -3,3 +3,6 @@
 // 아이콘정보
 // https://fontawesome.com/v5/search?o=r&m=free&s=solid
 
+// 로그인 로그아웃세션문제 maximumSessions
+//https://gompangs.tistory.com/entry/Spring-Boot-Spring-Security-maximumSessions-%EA%B4%80%EB%A0%A8
+
