--- a/history
+++ b/history
@@ -12,4 +12,9 @@
 // 검색기 설정
 //https://velog.io/@byeol4001/Meta-Tag-OG%EC%98%A4%ED%94%88%EA%B7%B8%EB%9E%98%ED%94%84-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0
 
+// 서치어드바이저 네이버 검색기 url등록
+//https://searchadvisor.naver.com/
+
+
+
 
