--- a/history
+++ b/history
@@ -20,3 +20,14 @@
 // https://bbaksae.tistory.com/23
 
 
+
+echo "# djangoweb02" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/majjingkaka/djangoweb02.git
+git push -u origin main
+
+$ git pull origin main --allow-unrelated-histories
+
